core/force-app/main/default/objects/NamedCredential__mdt/NamedCredential__mdt.object-meta.xml
<CustomObject>
    <description>Named Credentials used in app connections</description>
    <label>Named Credential</label>
    <pluralLabel>Named Credentials</pluralLabel>
</CustomObject>