core/force-app/main/default/objects/NamedCredential__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client ID of the Credential</description>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>