core/force-app/main/default/objects/NamedCredential__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Client Secret of the Credential</description>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>